--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
     <link rel="stylesheet" href="assests/TaxiPark_files/jquery-ui.css" />
 
     <link href="assests/TaxiPark_files/css" rel="stylesheet" />
+    <!-- <link rel="icon" type="image/png" href="https://colorlib.com/etc/tb/Table_Responsive_v1/images/icons/favicon.ico"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="assests/Table V01_files/bootstrap.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/animate.css">
+    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/perfect-scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/util.css">
+    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/main.css">
 
     <script
       async=""
@@ -44,6 +52,10 @@
       charset="UTF-8"
       src="assests/TaxiPark_files/util.js.download"
     ></script>
+
+
+<!-- <meta name="robots" content="noindex, follow"> -->
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
