added css files

--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="http://like-themes.com/taxipark/assets/images/favicon.png"
-    />
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <title>Flight Booking</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link rel="icon" type="image/png" href="http://like-themes.com/taxipark/assets/images/favicon.png" />
 
-    <link href="assests/TaxiPark_files/bootstrap-grid.css" rel="stylesheet" />
-    <link href="assests/TaxiPark_files/font-awesome.css" rel="stylesheet" />
-    <link href="assests/TaxiPark_files/swiper.css" rel="stylesheet" />
-    <link href="assests/TaxiPark_files/swipebox.css" rel="stylesheet" />
-    <link href="assests/TaxiPark_files/zoomslider.css" rel="stylesheet" />
-    <link href="assests/TaxiPark_files/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assests/TaxiPark_files/jquery-ui.css" />
+  <title>Flight Booking</title>
 
-    <link href="assests/TaxiPark_files/css" rel="stylesheet" />
-    <!-- <link rel="icon" type="image/png" href="https://colorlib.com/etc/tb/Table_Responsive_v1/images/icons/favicon.ico"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="assests/Table V01_files/bootstrap.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/animate.css">
-    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/select2.min.css">
-    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/perfect-scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/util.css">
-    <link rel="stylesheet" type="text/css" href="assests/Table V01_files/main.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap-grid.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.1.1/swiper-bundle.min.css" integrity="sha512-ZOhNKDt0whrHDdUeNKjuq2C8hturzwCSuCfrOIMIfy9QDgpSqDEebdkGQXvXh1xHmZOHSelDBrTLj6XlqbHz6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/swipebox/1.4.4/css/swipebox.css" integrity="sha512-aiphM8HYk085AcAAQwRkx5AcM9HvzCMjsaUirRoLEIdFCj6pkXgUgz73UNcG8Rr4CdvMOo7ApDDVNjpZOKx+CA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <link href="assests/TaxiPark_files/bootstrap-grid.css" rel="stylesheet" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap-grid.css" integrity="sha512-JQksK36WdRekVrvdxNyV3B0Q1huqbTkIQNbz1dlcFVgNynEMRl0F8OSqOGdVppLUDIvsOejhr/W5L3G/b3J+8w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <link href="assests/TaxiPark_files/font-awesome.css" rel="stylesheet" />
+  <link href="assests/TaxiPark_files/swiper.css" rel="stylesheet" />
+  <link href="assests/TaxiPark_files/swipebox.css" rel="stylesheet" />
+  <link href="assests/TaxiPark_files/zoomslider.css" rel="stylesheet" />
+  <link href="assests/TaxiPark_files/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assests/TaxiPark_files/jquery-ui.css" />
 
-    <script
-      async=""
-      src="assests/TaxiPark_files/analytics.js.download"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assests/TaxiPark_files/modernizr-2.6.2.min.js.download"
-    ></script>
-    <script
-      type="text/javascript"
-      charset="UTF-8"
-      src="assests/TaxiPark_files/common.js.download"
-    ></script>
-    <script
-      type="text/javascript"
-      charset="UTF-8"
-      src="assests/TaxiPark_files/util.js.download"
-    ></script>
+  <link href="assests/TaxiPark_files/css" rel="stylesheet" />
+  <!-- <link rel="icon" type="image/png" href="https://colorlib.com/etc/tb/Table_Responsive_v1/images/icons/favicon.ico"> -->
+  <!-- <link rel="stylesheet" type="text/css" href="assests/Table V01_files/bootstrap.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="assests/Table V01_files/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="assests/Table V01_files/animate.css">
+  <link rel="stylesheet" type="text/css" href="assests/Table V01_files/select2.min.css">
+  <link rel="stylesheet" type="text/css" href="assests/Table V01_files/perfect-scrollbar.css">
+  <link rel="stylesheet" type="text/css" href="assests/Table V01_files/util.css">
+  <link rel="stylesheet" type="text/css" href="assests/Table V01_files/main.css">
+
+  <script async="" src="assests/TaxiPark_files/analytics.js.download"></script>
+  <script type="text/javascript" src="assests/TaxiPark_files/modernizr-2.6.2.min.js.download"></script>
+  <script type="text/javascript" charset="UTF-8" src="assests/TaxiPark_files/common.js.download"></script>
+  <script type="text/javascript" charset="UTF-8" src="assests/TaxiPark_files/util.js.download"></script>
 
 
-<!-- <meta name="robots" content="noindex, follow"> -->
+  <!-- <meta name="robots" content="noindex, follow"> -->
 
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -70,5 +58,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
 </html>
