--- a/public/assests/TaxiPark.html
+++ b/public/assests/TaxiPark.html
@@ -11,7 +11,7 @@
 
 	<title>TaxiPark</title>
 
-	<link href="./TaxiPark_files/bootstrap-grid.css" rel="stylesheet">
+	<!-- <link href="./TaxiPark_files/bootstrap-grid.css" rel="stylesheet">
 	<link href="./TaxiPark_files/font-awesome.css" rel="stylesheet">
 	<link href="./TaxiPark_files/swiper.css" rel="stylesheet">
 	<link href="./TaxiPark_files/swipebox.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 	<link href="./TaxiPark_files/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="./TaxiPark_files/jquery-ui.css">
 
-	<link href="./TaxiPark_files/css" rel="stylesheet"> 
+	<link href="./TaxiPark_files/css" rel="stylesheet">  -->
 
 	<script async="" src="./TaxiPark_files/analytics.js.download"></script><script type="text/javascript" src="./TaxiPark_files/modernizr-2.6.2.min.js.download"></script>
 <script type="text/javascript" charset="UTF-8" src="./TaxiPark_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="./TaxiPark_files/util.js.download"></script></head>
